--- a/Sajid_project_2/Transformer Code.ipynb
+++ b/Sajid_project_2/Transformer Code.ipynb
@@ -3143,18 +3143,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "3a4c1c2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_clubs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_clubs\u001b[49m\u001b[38;5;241m.\u001b[39mloc[df_clubs\u001b[38;5;241m.\u001b[39mclubs \u001b[38;5;241m!=\u001b[39m df_clubs\u001b[38;5;241m.\u001b[39mclubs]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_clubs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df_clubs.loc[df_clubs.clubs != df_clubs.clubs]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 88,
    "id": "02684c2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dftp.to_csv(\"all_players_main.csv\")\n",
-    "df_players_stats.to_csv(\"players_stats.csv\")\n",
-    "df_keepers_stats.to_csv(\"keepers_stats.csv\")\n",
-    "df_clubs.to_csv(\"clubs.csv\")\n",
-    "df_positions.to_csv(\"positions.csv\")\n",
-    "df_squads.to_csv(\"squads.csv\")"
+    "dftp.to_csv(\"all_players_main.csv\", index=False)\n",
+    "df_players_stats.to_csv(\"players_stats.csv\", index=False)\n",
+    "df_keepers_stats.to_csv(\"keepers_stats.csv\", index=False)\n",
+    "df_clubs.to_csv(\"clubs.csv\", index=False)\n",
+    "df_positions.to_csv(\"positions.csv\", index=False)\n",
+    "df_squads.to_csv(\"squads.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d15f283",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
