--- a/Sajid_project_2/Transformer Code.ipynb
+++ b/Sajid_project_2/Transformer Code.ipynb
@@ -3143,24 +3143,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3a4c1c2d",
+   "execution_count": 3,
+   "id": "48f07d41",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_clubs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_clubs\u001b[49m\u001b[38;5;241m.\u001b[39mloc[df_clubs\u001b[38;5;241m.\u001b[39mclubs \u001b[38;5;241m!=\u001b[39m df_clubs\u001b[38;5;241m.\u001b[39mclubs]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_clubs' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_clubs.loc[df_clubs.clubs != df_clubs.clubs]"
+    "#df_clubs.loc[df_clubs.clubs != df_clubs.clubs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0104d8d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theage_list = []\n",
+    "for age in dftp.age:\n",
+    "    theage = age.split('-')[0]\n",
+    "    theage_list.append(theage)\n",
+    "    #print(type(variable))\n",
+    "    #theage_list.append(int(variable))\n",
+    "\n",
+    "theage_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "321e0a6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dftp.age = theage_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de3f0edc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_keepers_stats = df_keepers_stats.rename(columns = {\"Goals Against\": \"goals_against\", \"Shots on Target Against\": \"shots_on_target_against\",\n",
+    "                                                     \"Saves\": \"saves\", \"Clean Sheets\": \"clean_sheets\", \"Penalty Kicks Attempted\": \"penalty_kicks_attempted\",\n",
+    "                                                     \"Penalty Kicks Allowed\": \"penalty_kicks_allowed\", \"Penalty kicks Saved\": \"penalty_kicks_saved\"})\n"
    ]
   },
   {
@@ -3181,7 +3208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d15f283",
+   "id": "de0d2d9e",
    "metadata": {},
    "outputs": [],
    "source": []
